# eighty

./: Cargo.toml  README.md
.github/workflows/: rust.yml
byte-pattern/: Cargo.toml
byte-pattern/src/: lib.rs
eighty/: Cargo.toml
eighty/src/: args.rs  decode.rs  emulate.rs  main.rs  ui.rs  util.rs
eighty/src/emulate/: button.rs  execute.rs  execute_one.rs  flags.rs  mod.rs  ports.rs  registers.rs  regs_and_mem.rs  shift_register.rs  sound.rs
eighty/src/isa/: buffer.rs  decode.rs  mod.rs  model.rs  num_cycles.rs
info/: refs.txt
programs/: README.md  invaders.dis.asm
