[package]
edition = "2021"
name = "eighty"
version = "0.1.0"

[dependencies]
argh = "0.1"
audio-engine = { version = "0.4.3", features = ["ogg"], default-features = false }
byte-pattern = { path = "../byte-pattern" }
cpal = "0.14"
gilrs = "0.9"
log = "0.4"
pixels = "0.9"
simplelog = "0.12"
spin_sleep = "1"
winit = "0.27"
